# karMtka

./: .env  Dockerfile  LICENSE  README.md  compose.yaml  docker_build.sh  karmtka.nuitka-package.config.yml  pyproject.toml
docs/: STYLES_WEIGHTS.md
src/: config.py  main.py
src/kaitai/: __init__.py  kaitai_leb128.py  rm_v6.py
src/packet/: __init__.py  group.py  id.py  line.py  migration.py  packet.py  sceneinfo.py  signature.py  stats.py  text.py  tree.py  uid.py
src/page/: __init__.py  page.py  resolution.py
src/sketch/: __init__.py  conversion.py  csketch.py  image.py  sketch.py
src/sketch/libsketch/: Makefile  libsketch.c  libsketch.h
src/xochitl/: __init__.py  recent.py  xochitl.py
