[project]
name = "karmtka"
version = "0.2.0"
description = "command line tool for generating simple reMarkable text pages"
authors = [
    {name = "cyanjnpr",email = "150724329+cyanjnpr@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "leb128 (>=1.0.8)",
    "kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git@serialization",
    "click (>=8.1.7)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
