[project]
name = "karmtka"
version = "0.2.2"
description = "command line tool for generating simple reMarkable pages"
authors = [ 
    { name = "cyanjnpr" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry.dependencies]
leb128 = "^1.0.8"
click = "^8.1.7"
pillow = "^11.3.0"
kaitaistruct = { git = "https://github.com/kaitai-io/kaitai_struct_python_runtime.git", branch = "serialization" }

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
